// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Separator Snapshots should apply 'black' skin classes 1`] = `
<div>
  <hr
    class="separator separator--black separator--horizontal separator--space-block-none separator--space-inline-none"
  />
</div>
`;

exports[`Separator Snapshots should apply 'critical' skin classes 1`] = `
<div>
  <hr
    class="separator separator--critical separator--horizontal separator--space-block-none separator--space-inline-none"
  />
</div>
`;

exports[`Separator Snapshots should apply 'critical-faded' skin classes 1`] = `
<div>
  <hr
    class="separator separator--critical-faded separator--horizontal separator--space-block-none separator--space-inline-none"
  />
</div>
`;

exports[`Separator Snapshots should apply 'info' skin classes 1`] = `
<div>
  <hr
    class="separator separator--info separator--horizontal separator--space-block-none separator--space-inline-none"
  />
</div>
`;

exports[`Separator Snapshots should apply 'info-faded' skin classes 1`] = `
<div>
  <hr
    class="separator separator--info-faded separator--horizontal separator--space-block-none separator--space-inline-none"
  />
</div>
`;

exports[`Separator Snapshots should apply 'neutral' skin classes 1`] = `
<div>
  <hr
    class="separator separator--neutral separator--horizontal separator--space-block-none separator--space-inline-none"
  />
</div>
`;

exports[`Separator Snapshots should apply 'neutral-faded' skin classes 1`] = `
<div>
  <hr
    class="separator separator--neutral-faded separator--horizontal separator--space-block-none separator--space-inline-none"
  />
</div>
`;

exports[`Separator Snapshots should apply 'primary' skin classes 1`] = `
<div>
  <hr
    class="separator separator--primary separator--horizontal separator--space-block-none separator--space-inline-none"
  />
</div>
`;

exports[`Separator Snapshots should apply 'primary-faded' skin classes 1`] = `
<div>
  <hr
    class="separator separator--primary-faded separator--horizontal separator--space-block-none separator--space-inline-none"
  />
</div>
`;

exports[`Separator Snapshots should apply 'secondary' skin classes 1`] = `
<div>
  <hr
    class="separator separator--secondary separator--horizontal separator--space-block-none separator--space-inline-none"
  />
</div>
`;

exports[`Separator Snapshots should apply 'secondary-faded' skin classes 1`] = `
<div>
  <hr
    class="separator separator--secondary-faded separator--horizontal separator--space-block-none separator--space-inline-none"
  />
</div>
`;

exports[`Separator Snapshots should apply 'success' skin classes 1`] = `
<div>
  <hr
    class="separator separator--success separator--horizontal separator--space-block-none separator--space-inline-none"
  />
</div>
`;

exports[`Separator Snapshots should apply 'success-faded' skin classes 1`] = `
<div>
  <hr
    class="separator separator--success-faded separator--horizontal separator--space-block-none separator--space-inline-none"
  />
</div>
`;

exports[`Separator Snapshots should apply 'warning' skin classes 1`] = `
<div>
  <hr
    class="separator separator--warning separator--horizontal separator--space-block-none separator--space-inline-none"
  />
</div>
`;

exports[`Separator Snapshots should apply 'warning-faded' skin classes 1`] = `
<div>
  <hr
    class="separator separator--warning-faded separator--horizontal separator--space-block-none separator--space-inline-none"
  />
</div>
`;

exports[`Separator Snapshots should apply 'white' skin classes 1`] = `
<div>
  <hr
    class="separator separator--white separator--horizontal separator--space-block-none separator--space-inline-none"
  />
</div>
`;

exports[`Separator Snapshots should orientation classes 1`] = `
<div>
  <hr
    class="separator separator--neutral-faded separator--vertical separator--space-block-none separator--space-inline-none"
  />
</div>
`;

exports[`Separator Snapshots should render additional classes 1`] = `
<div>
  <hr
    class="separator separator--neutral-faded separator--horizontal separator--space-block-none separator--space-inline-none other-class"
  />
</div>
`;

exports[`Separator Snapshots should renders default component 1`] = `
<div>
  <hr
    class="separator separator--neutral-faded separator--horizontal separator--space-block-none separator--space-inline-none"
  />
</div>
`;

exports[`Separator Snapshots should space classes 1`] = `
<div>
  <hr
    class="separator separator--neutral-faded separator--horizontal separator--space-block-lg separator--space-inline-5xl"
  />
</div>
`;
